syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.xeridia.ws.generated";
option java_outer_classname = "MessageProto";

package com.xeridia.ws;

service MessageService {
  rpc FindById (MessageRequest) returns (MessageReply) {}
}

message MessageRequest {
  int32 id = 1;
}

message MessageReply {
  int32 id = 1;
  string product = 2;
  double price = 3;
}